# Grafology

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  a.txt  build.ps1  grafologyConfig.cmake.in
.github/workflows/: main.yml
docs/: README.md  graph_implementations.md  installation.md
docs/algos/: bridges.md  bridges_and_AP.md  cycles.md  maximum_flow.md  minimum_spanning_tree.md  shortest_paths.md  strongly_connected_components.md  topological_sorting.md  transitive_closure.md
docs/generators/: R3Mat.md
docs/imgs/: .$adjacency-csr.drawio.bkp  adjacency-csr.drawio  adjacency-list.drawio  adjacency-matrix.drawio
examples/: .gitignore  CMakeLists.txt  ex01-topological-sort-graph.cpp  ex01-topological-sort-impl.cpp  ex01-topological-sort.cpp  ex02-depth-and-breath-first-search-graph.cpp  ex02-depth-and-breath-first-search-impl.cpp  ex02-depth-first-search-graph.cpp  ex02-depth-first-search-impl.cpp  ex03-minimal-spanning-tree.cpp  ex04-all-shortest.paths.cpp  ex04-shortest-paths.cpp  fx_arbitrage.cpp  get_fx_rates.py  london_tube.cpp  london_tube.h  utils.cpp  utils.h
scripts/: build.ps1  vs-setup.ps1
src/cpp/: Grafology.cpp  dense_graph_impl.cpp  flat_index_map.cpp  r3mat_generator.cpp  sparse_graph_impl.cpp
src/include/grafology/: bimap.h  concepts_utils.h  dense_graph_impl.h  disjoint_set.h  flat_index_map.h  grafology.h  graph.h  graph_impl.h  graph_traits.h  graphimpl.h  node.h  sparse_graph_impl.h  utilities.h  vertex.h
src/include/grafology/algorithms/: all_shortest_paths.h  articulation_points.h  breath_first_search.h  bridges.h  cycles.h  depth_first_search.h  maximum_flow.h  minimum_spanning_tree.h  requirements.h  shortest_path.h  shortest_paths.h  strongly_connected_components.h  topoligical_sort.h  topological_sort.h  transitive_closure.h
src/include/grafology/generators/: r3mat_generator.h
src/include/grafology/internal/: generator.h  generator_impl.h
test-cmake/: CMakeLists.txt  CMakePresets.json  README.md  test.cpp  test_build.ps1
tests/: CMakeLists.txt  test_bimap.cpp  test_flat_index_map.cpp  test_vertex.h  tests.cpp  tests_algos.cpp  tests_algos_graph.cpp  tests_algos_impl.cpp  tests_bimap.cpp  tests_disjoint_set.cpp  tests_flat_index_map.cpp  tests_generator.cpp  tests_graph.cpp  tests_graph_generators.cpp  tests_graph_impl.cpp  tests_vertex.cpp
tests/graphviz/: all_paths.dot  disjoint_set.dot  disjoint_set_and_MST.dot  network1.dot  scratch.dot  transitive_closure.dot
vcpkg/mac/: arm64-osx-gcc.cmake  gcc-14-toolchain.cmake
